--- a/read/templates/read/main_read_page.html
+++ b/read/templates/read/main_read_page.html
@@ -1,33 +1,37 @@
 {% extends 'base/base.html' %}
 {% load static %}
-{% block title %}
-  Read
+{% block title %}Read{% endblock %}
+{% block extrahead %}
+    <link rel="stylesheet" href="{% static 'read/css/read.css' %}" />
 {% endblock %}
-
 {% block content %}
-  <div class="box">
-    <p>Currently Reading</p>
-    <div class="columns is-multiline is-justify-content-center">
-      {% for reading in currently_reading %}
-        <div class="column is-3">
-          {% include 'read/_book_card.html' with reading=reading %}
+    <div class="box">
+        <p>Currently Reading</p>
+        <div class="columns is-multiline is-justify-content-center">
+            {% for reading in currently_reading %}
+                <div class="column is-3">{% include 'read/_book_card.html' with reading=reading %}</div>
+            {% empty %}
+                <p>Nothing being read.</p>
+            {% endfor %}
         </div>
-      {% empty %}
-        <p>Nothing being read.</p>
-      {% endfor %}
     </div>
-  </div>
-  <div class="box">Target till end of year</div>
-  <div class="box">
-    Streaks<div class="columns is-justify-content-center">
-      <div class="column is-three-quarters" id="cal-heatmap"></div>
+    <div class="box">Target till end of year</div>
+    <div class="box heatmap-box">
+        Streaks
+        <div id="heatmap-container" data-heatmap-url="{% url "read:daily-logs" %}">
+            <div id="cal-heatmap"></div>
+            <div class="heatmap-controls">
+                <button class="button is-primary is-small" id="prev-btn">Previous</button>
+                <button class="button is-primary is-small" id="next-btn">Next</button>
+                <button class="button is-primary is-small" id="today-btn">Today</button>
+            </div>
+        </div>
     </div>
-  </div>
-  <div class="box">Last Finished</div>
-  <div class="box">Top rated vs worst rated</div>
-  <div class="box">Other like wanted to read</div>
-  <div id="cal-heatmap"></div>
+    <div class="box">Last Finished</div>
+    <div class="box">Top rated vs worst rated</div>
+    <div class="box">Other like wanted to read</div>
+    <div id="cal-heatmap"></div>
 {% endblock %}
 {% block scripts %}
-  <script type="module" src="{% static 'read/heatmap.js' %}"></script>
+    <script type="module" src="{% static 'read/heatmap.js' %}"></script>
 {% endblock %}
