fix(frontend): Centered footer of book cards on larger cards
- made the footer of the book card behave as a footer item in order to
center it when the size of the card changes;

--- a/read/templates/read/_book_card_footer.html
+++ b/read/templates/read/_book_card_footer.html
@@ -1,5 +1,6 @@
-<footer>
-    <form method="post"
+<footer class="card-footer">
+    <form class="card-footer-item"
+          method="post"
           hx-post="{% url 'read:add_reading_log' reading.id %}"
           hx-trigger="submit"
           hx-target="#progress-wrapper-{{ reading.id }}"
